# Fleet

./: .gitignore  README.md  argument.py  local_cluster.sh  network.py  py_reader_generator.py  train.py
docs/source/: index.rst
docs/source/paddle_fleet_rst/: paddle_on_k8s.rst
examples/distribute_metapath2vec/: cloud_run.sh  cluster_train.py  local_config  readme
examples/distributed_ctr/: argument.py  convert.py  infer.py  local_cluster.sh  network.py  print.py  train.py
examples/distributed_ctr/test_data/: part-221
examples/distributed_ctr/train_data/: part-24
examples/distributed_ctr_inference/: CMakeLists.txt  main.cc
examples/distributed_ctr_inference/demo/: __model__  _generated_var_0  _generated_var_1  _generated_var_2  _generated_var_3  fc_0.b_0  fc_0.w_0  fc_1.b_0  fc_1.w_0  fc_2.b_0  fc_2.w_0  fc_3.b_0  fc_3.w_0  print.py
examples/hdfs_reader/: dataset_generator.py  train.py
examples/inference_c++/: CMakeLists.txt  covert.py  main.cc  readme.md
examples/inference_c++/demo/: __model__  fc_0.b_0  fc_0.w_0  fc_1.b_0  fc_1.w_0  fc_2.b_0  fc_2.w_0  fc_3.b_0  fc_3.w_0  print.py
markdown_doc/: data_prepare.md
model/epoch_0/: SparseFeatFactors  __model__  _generated_var_0  _generated_var_1  _generated_var_2  _generated_var_3  fc_0.b_0  fc_0.w_0  fc_1.b_0  fc_1.w_0  fc_2.b_0  fc_2.w_0  fc_3.b_0  fc_3.w_0
test_data/: part-223
train_data/: part-23  part-25
